---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
    - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2022-10-19
  Changes:
    - Deconstruction planners from library no longer deconstruct unapproved ghosts.
  Bugfixes:
    - Fixed crash when player deconstructs area with deconstruction planner from game/player library due to mismatch between deconstruction force and player force.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-08-08
  Bugfixes:
    - Fixed crash when player places a bluperint using blueprint book from inventory.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-08-07
  Bugfixes:
    - Fixed placeholders staying behind when canceling deconstruction of entities that do not overlap with the placeholder entity itself.
    - Fixed placeholders staying behind when "quick-building" rails.
    - Fixed undo queue with unapproved ghosts not being preserved correctly when canceling deconstruction.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-08-03
  Features:
    - Unapproved underground belts and their non-unapproved counterparts can now be rotated together, with some caveats in logic.
  Bugfixes:
    - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
    - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
    - Fixed (hard) crash when undoing changes after the deconstruction planner has been used against area with tiles.