@@ -2,6 +2,8 @@
 Version: 999.999.999
 Date: 9999-99-99
   Changes:
+    - Construction planner tool highlights and counts affected (unapproved) ghosts instead of placeholder ghosts. Works with both approval and unapproval.
+    - Construction planner tool highlights affected ghosts using red outline (similar to what other vanilla planners do) instead of green.
   Features:
   Bugfixes:
     - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
